--- a/Week-11/Day-4/ExerciseXP/templates/homepage.html
+++ b/Week-11/Day-4/ExerciseXP/templates/homepage.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
 
-</body>
-</html>
+{% extends "index.html" %}
+
+{% block title %}Homepage{% endblock %}
+
+{% block title_page %}
+    Welcome to Tech Market
+{% endblock %}
+
+{% block text_page %}
+    The fastest growing online retailer in the west...
+{% endblock %}
