--- a/Week-11/Day-4/ExerciseXP/templates/products.html
+++ b/Week-11/Day-4/ExerciseXP/templates/products.html
@@ -20,9 +20,10 @@
                     {{ product['Name'] }}
                 </div>
                 <div class="card-body">
-                <h5 class="card-title">{{ product['Description'] }}</h5>
+                <h5 class="card-title">{{ product['ProductId'] }}</h5>
                 <p class="card-text">{{ product['Description'] }}</p>
-                <a href="{{url_for('product_details_page', product_id=product['ProductId']}}" class="btn btn-primary">More details</a>
+                <p class="card-text">Price: {{ product['Price'] }}</p>
+                <a href="{{url_for('product_details_page', product_id=product['ProductId'])}}" class="btn btn-primary">More details</a>
                 </div>
             </div>
         </div>
