--- a/Week-11/Day-5/MiniProject/templates/homepage.html
+++ b/Week-11/Day-5/MiniProject/templates/homepage.html
@@ -4,5 +4,7 @@
 {% block title %}Homepage{% endblock %}
 
 {% block page_detail %}
-
+<div class="container">
+    <h1>Welcome to my store!</h1>
+</div>
 {% endblock %} 
