--- a/Week-11/Day-5/MiniProject/templates/index.html
+++ b/Week-11/Day-5/MiniProject/templates/index.html
@@ -25,7 +25,7 @@
               <a class="nav-link" href="{{url_for('products_page')}}">Our products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Cart</a>
+              <a class="nav-link" href="{{url_for('cart_page')}}">Cart</a>
             </li>
           </ul>
         </div>
