--- a/Week-11/Day-5/DailyChallenge/templates/type_page.html
+++ b/Week-11/Day-5/DailyChallenge/templates/type_page.html
@@ -5,15 +5,17 @@
 
 
 {% block page_detail %}
-
+    <div class="row row-cols-1 row-cols-md-3 g-4">
     {% for pokemon in poke_data %}
-        <div class="container mt-2">
-            <div class="card">
-                <div class="card-body">
-                    <h5 class="card-title"><a href="{{url_for('pokemon_name', name=pokemon)}}">{{ pokemon }}</a></h5>
+        <div class="col">
+            <div class="container mt-2">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title"><a href="{{url_for('pokemon_name', name=pokemon)}}">{{ pokemon }}</a></h5>
+                    </div>
                 </div>
             </div>
         </div>
     {% endfor %}
-
+    </div>
 {% endblock %}
