--- a/Week-13/Day-4/MiniProject/app/templates/index.html
+++ b/Week-13/Day-4/MiniProject/app/templates/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">
       <div class="container">
-        <a class="navbar-brand" href="{{url_for('homepage')}}">Shoping cart site</a>
+        <a class="navbar-brand" href="{{url_for('homepage')}}">Pets shop</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,7 +22,7 @@
               <a class="nav-link active" aria-current="page" href="{{url_for('homepage')}}">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{{url_for('products_page')}}">Our products</a>
+              <a class="nav-link" href="{{url_for('pets_page')}}">Pets</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{{url_for('cart_page')}}">Cart</a>
@@ -32,7 +32,7 @@
       </div>
     </nav>
 
-    
+
     {% block page_detail %}{% endblock %}
 
 </body>
