--- a/Week-13/Day-4/MiniProject/app/templates/pets.html
+++ b/Week-13/Day-4/MiniProject/app/templates/pets.html
@@ -5,37 +5,38 @@
 
 {% block page_detail %}
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-    <script type=text/javascript>
-            $(function() {
-              $('a.add_button').bind('click', function(e) {
-                e.preventDefault()
-                $.getJSON('/add_product_to_cart_from_products/' + e.target.id,
-                    function(data) {
-                  //do nothing
-                });
-                return false;
-              });
-            });
-    </script>
+<!--    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>-->
+<!--    <script type=text/javascript>-->
+<!--            $(function() {-->
+<!--              $('a.add_button').bind('click', function(e) {-->
+<!--                e.preventDefault()-->
+<!--                $.getJSON('/add_product_to_cart_from_products/' + e.target.id,-->
+<!--                    function(data) {-->
+<!--                  //do nothing-->
+<!--                });-->
+<!--                return false;-->
+<!--              });-->
+<!--            });-->
+<!--    </script>-->
 
     <div class="container">
-        <h2>Products</h2>
+        <h2>Our pets</h2>
     </div>
 
-    {% for product in products %}
-        <div class="container mt-2">   
-            <div class="card">
-                <img src="{{url_for('static', filename=product['ProductPicUrl'])}}" class="card-img-top w-25">
-                <div class="card-body">
-                <h5 class="card-title">{{ product['ProductId'] }}</h5>
-                <p class="card-text">Price: {{ product['Price'] }}</p>
-                <a href="{{url_for('product_details_page', product_id=product['ProductId'])}}">See item details</a>
-                <br>
-                <a href="#" id='{{product["ProductId"]}}' class="add_button btn btn-primary">Add to cart</a>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+    {% for pet in pets %}
+        <div class="col">
+            <div class="container mt-2">
+                <div class="card">
+                    <img src="{{url_for('static', filename=pet['image'])}}" class="card-img-top w-25">
+                    <div class="card-body">
+                    <h5 class="card-title">{{ pet['name'] }}</h5>
+                    <p class="card-text">Price: {{ product['price'] }}</p>
+                    <a href="{{url_for('product_details_page', product_id=product['ProductId'])}}">View details</a>
+                    </div>
                 </div>
             </div>
         </div>
     {% endfor %}
-    
+    </div>
 {% endblock %} 
