--- a/Week-13/Day-4/DailyChallenge/app/templates/index.html
+++ b/Week-13/Day-4/DailyChallenge/app/templates/index.html
@@ -11,6 +11,11 @@
     {% endfor %}
 
     <div>
+        <p>Nationalities</p>
+        {% for nationality in nationalities %}
+            <p>nationality: {{nationality['name']}}</p>
+        {% endfor %}
+        <br>
         <p>User info</p>
         {% for user in users %}
             <p>Name:{{user['name']}} | Street:{{user['address']}} | E-mail:{{user['email']}}</p>
@@ -20,6 +25,7 @@
         {% for phone in phones %}
             <p>phone number: {{phone['number']}}</p>
         {% endfor %}
+
     </div>
 
 </body>
