--- a/Week-13/Day-5/MiniProject/app/templates/index.html
+++ b/Week-13/Day-5/MiniProject/app/templates/index.html
@@ -2,31 +2,37 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href={{url_for('static', filename='style.css')}}>
     <title>To Do</title>
 </head>
-<body>
+<body style="background-color: rgb(253, 147, 108);">
 
+    <nav class="navbar navbar-expand-lg bg-danger bg-gradient">
+        <div class="container">
+            <a class="navbar-brand fs-3 text-light" href="#">TO DO list</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        </div>
+    </nav>
+    
     {% for message in get_flashed_messages() %}
-        <p>{{ message }}</p>
-    {% endfor %}
-
-    <div>
-        <p>Nationalities</p>
-        {% for nationality in nationalities %}
-            <p>nationality: {{nationality['name']}}</p>
-        {% endfor %}
-        <br>
-        <p>User info</p>
-        {% for user in users %}
-            <p>Name:{{user['name']}} | Street:{{user['address']}} | E-mail:{{user['email']}}</p>
-        {% endfor %}
-        <br>
-        <p>Phones</p>
-        {% for phone in phones %}
-            <p>phone number: {{phone['number']}}</p>
-        {% endfor %}
-
+        <div class="alert alert-warning" role="alert">
+            {{ message }}
+        </div>
+    {% endfor %}   
+   
+    <div class="container-fluid d-flex justify-content-center">
+        <div class="input-group mb-3 w-50 mt-4">
+            <input type="text" class="form-control" placeholder="new task" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-outline-secondary" type="button" id="button-addon2">ADD</button>
+        </div>
     </div>
+
 
 </body>
 </html>
