--- a/Week-13/Day-5/MiniProject/app/templates/index.html
+++ b/Week-13/Day-5/MiniProject/app/templates/index.html
@@ -25,14 +25,35 @@
             {{ message }}
         </div>
     {% endfor %}   
-   
-    <div class="container-fluid d-flex justify-content-center">
-        <div class="input-group mb-3 w-50 mt-4">
-            <input type="text" class="form-control" placeholder="new task" aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary" type="button" id="button-addon2">ADD</button>
+    <div class="container-fluid d-flex flex-column align-items-center">
+        <div class="container-fluid d-flex justify-content-start w-50">
+            <div class="input-group mb-3 mt-4">
+                <input type="text" class="form-control" placeholder="new task" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-secondary" type="button" id="button-addon2">ADD</button>
+            </div>
+        </div>
+
+        <div class="container-fluid d-flex flex-column mt-2 w-50" id="tasks">
+            <div class="d-flex mt-1">
+                <button class="btn btn-danger me-1 d-flex align-items-center ps-1" type="submit" style="width:5px; height: 25px;">X</button>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                        Default checkbox
+                    </label>
+                </div>            
+            </div>
+ 
+            <div class="d-flex mt-1">
+                <button class="btn btn-danger me-1 d-flex align-items-center ps-1" type="submit" style="width:5px; height: 25px;">X</button>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                        Default checkbox
+                    </label>
+                </div>            
+            </div>
         </div>
     </div>
-
-
 </body>
 </html>
