--- a/Week-13/Day-5/MiniProject/app/templates/index.html
+++ b/Week-13/Day-5/MiniProject/app/templates/index.html
@@ -35,7 +35,7 @@
 
         <div class="container-fluid d-flex flex-column mt-2 w-50" id="tasks">
             <div class="d-flex mt-1">
-                <button class="btn btn-danger me-1 d-flex align-items-center ps-1" type="submit" style="width:5px; height: 25px;">X</button>
+                <button class="btn btn-danger me-1 d-flex align-items-center ps-2 pe-3" type="submit" style="width:5px; height: 25px;">X</button>
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
                     <label class="form-check-label" for="flexCheckDefault">
