--- a/Week-16/Day-1/MiniProjectCrypto/app/auth/templates/base.html
+++ b/Week-16/Day-1/MiniProjectCrypto/app/auth/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="hero is-primary is-fullheight">
+    <section class="hero is-primary is-fullheight" style="background-color: rgb(184, 181, 181);">
 
         <div class="hero-head">
             <nav class="navbar">
@@ -21,7 +21,7 @@
                                 Home
                             </a>
                             {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('main.profile') }}" class="navbar-item">
+                            <a href="{{ url_for('auth.profile') }}" class="navbar-item">
                                 Profile
                             </a>
                             {% endif %}
@@ -50,6 +50,7 @@
                {% endblock %}
             </div>
         </div>
+
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
