--- a/Week-16/Day-1/MiniProjectCrypto/app/main/templates/base.html
+++ b/Week-16/Day-1/MiniProjectCrypto/app/main/templates/base.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <section class="hero is-primary is-fullheight">
+    <section class="hero is-primary is-fullheight" style="background-color: rgb(184, 181, 181);">
 
         <div class="hero-head">
             <nav class="navbar">
@@ -21,7 +21,7 @@
                                 Home
                             </a>
                             {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('main.profile') }}" class="navbar-item">
+                            <a href="{{ url_for('auth.profile') }}" class="navbar-item">
                                 Profile
                             </a>
                             {% endif %}
